--- a/week-01/divs.html
+++ b/week-01/divs.html
@@ -7,8 +7,6 @@
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
-    <div id="rectangle"></div>
-    <div class="square"></div>
-    <div class="square"></div>
+    <div class="square-A"><div class="square-B"><div class="square-C"><div class ="square-D"></div></div></div></div></div>
 </body>
 </html>
