--- a/week-01/divs.html
+++ b/week-01/divs.html
@@ -8,7 +8,6 @@
 </head>
 <body>
     <div id="rectangle"></div>
-    <div class="square"><div class="square"></div></div>
-    <div class="square"></div>
+    <div class="square"><div class="innersquare"></div></div>    
 </body>
 </html>
