Wed 2nd Aug Lesson

--- a/week-02/second.html
+++ b/week-02/second.html
@@ -9,5 +9,13 @@
 <body>
     <h1>THIS IS MY SECOND page</h1>
     <div class="rectangle"></div>
+
+    <div class="sq1">
+        <div class="sq2">
+            <div class="sq3">
+                <div class="sq4"></div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
