Wednesday 2nd August Lesson

--- a/week-02/second.html
+++ b/week-02/second.html
@@ -7,8 +7,15 @@
     <link rel="stylesheet" href="./css/style.css" type="text/css">
 </head>
 <body>
-    <h1>This is my second file</h1>
-
+    <h1>This is my second page</h1>
     <div class="rectangle"></div>
+
+    <div class="sq1">
+        <div class="sq2">
+            <div class="sq3">
+                <div class="sq4"></div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
