Wed 2nd Aug Lesson

--- a/week-02/second.html
+++ b/week-02/second.html
@@ -6,9 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Second page</title>
     <link rel="stylesheet" href="./css/style.css" type="text/css">
-</head>
-<body>
-    <h1>This Is My Second Page</h1>
+    <h1>This is my second page</h1>
     <div class="rectangle"></div>
+    <div class="square1">
+        <div class="square2">
+            <div class="square3">
+                <div class="square4"></div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
