Fixed main layout

--- a/week-05/index.html
+++ b/week-05/index.html
@@ -23,8 +23,8 @@
                 </div>
             </div>
         </section>
-        <section class="container mt-4">
-            <div id="myContent" class="columns">
+        <section class="container mt-4 is-fluid">
+            <div id="myContent" class="columns is-multiline">
                 <div class="column is-full-mobile is-half-tablet is-one-quarter-desktop">
                     <div class="card">
                         <div class="card-image">
@@ -45,6 +45,13 @@
                 </div>
             </div>
         </section>
+        <footer class="footer mt-6">
+            <div class="content has-text-centered">
+              <p>
+                <strong>Blog</strong> by <a href="https://generalassemb.ly">General Assembly</a>. - &copy; 2023
+              </p>
+            </div>
+          </footer>
     </div>
 
     <script src="./js/scripts.js"></script>
