--- a/week-05/calculator.html
+++ b/week-05/calculator.html
@@ -8,7 +8,7 @@
 <body>
     <form action="#">
         <input type="number" name="numberOne" id="numberOne" required>
-        <strong>+</strong>
+        <input type="text" name="sign" id="sign" required>
         <input type="number" name="numberTwo" id="numberTwo" required>
         <input type="submit" value="Add" id="mySubmit">
     </form>
@@ -19,7 +19,7 @@
         <label for="age">Your age</label>
         <input type="number" id="age" name="age" required>
         <input type="submit" id="myGreeting" value="Get Greeting">
-    </form>
+    </form>els
     <div id="greeting"></div>
     <script src="./js/calculator.js"></script>
 </body>
