Wednesday 30th Aug, HW

--- a/week-05/calculator.html
+++ b/week-05/calculator.html
@@ -23,7 +23,7 @@
         <input type="number" name="numTwo" id="numTwo" required>
         <input type="submit" value="Add" id="mySubmit">
     </form>
-    <div id="result"></div>
+    <div id="addResult"></div>
     <form action="#">
         <label for="name">Your name</label>
         <input type="text" name="name" id="name" required>
