20th Sept lab lesson

--- a/finalproject/authordetails.html
+++ b/finalproject/authordetails.html
@@ -46,6 +46,14 @@
             Author Details Page
         </p>
     </div>
+    <div class="mb-3">
+        <label for="formGroupExampleInput" class="form-label">Blog Author</label>        
+        <input type="text" class="form-control" id="formGroupExampleInput" value="John Smith" disabled readonly>
+      </div>
+      <div class="mb-3">
+        <label for="formGroupExampleInput" class="form-label">Gender</label>
+        <input type="text" class="form-control" id="formGroupExampleInput" value="Male" disabled readonly>
+      </div>
     <footer class="bg-info text-center py-3">
         <div class="container-fluid d-flex align-items-center">
             <p class="col-sm-12 col-md-1 d-flex justify-content-start"></p>
