--- a/finalproject/blogdetails.html
+++ b/finalproject/blogdetails.html
@@ -46,6 +46,23 @@
             Blog Details Page
         </p>
     </div>
+    <div class="mb-3">
+        <label for="formGroupExampleInput" class="form-label">Blog Title</label>        
+        <input type="text" class="form-control" id="formGroupExampleInput" value="Blog 1" disabled readonly>
+      </div>
+      <div class="mb-3">
+        <label for="formGroupExampleInput" class="form-label">Blog Author</label>
+        <input type="text" class="form-control" id="formGroupExampleInput" value="John Smith" disabled readonly>
+      </div>
+      <div class="mb-3">
+        <label for="formGroupExampleInput" class="form-label">Blog Date Published</label>
+        <input type="text" class="form-control" id="formGroupExampleInput" value="09/09/2023" disabled readonly>
+      </div>
+      <img src="..." class="img-thumbnail" alt="...">
+      <div class="mb-3">
+        <label for="exampleFormControlTextarea1" class="form-label">Blog Post</label>
+        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" readonly>This be the blog post</textarea>
+      </div>
     <footer class="bg-info text-center py-3">
         <div class="container-fluid d-flex align-items-center">
             <p class="col-sm-12 col-md-1 d-flex justify-content-start"></p>
