--- a/finalproject/index.html
+++ b/finalproject/index.html
@@ -46,6 +46,9 @@
             Home Page
         </p>
     </div>
+    <main class="container mt-2">
+        <article id="blogs" class="row"></article>
+    </main>
     <footer class="bg-info text-center py-3">
         <div class="container-fluid d-flex align-items-center">
             <p class="col-sm-12 col-md-1 d-flex justify-content-start"></p>
