--- a/finalproject/blogs.html
+++ b/finalproject/blogs.html
@@ -40,10 +40,45 @@
             </div>
         </div>
 </nav>
-<div>
-    <p>
+<p></p>
+<div class="text-center">
+    <h3>
         Blogs
-    </p>
+    </h3>
+</div>
+<p></p>
+<div class="container text-center">
+    <table class="table">
+        <thead>
+          <tr class="table-info">
+            <th scope="col">Blog Title</th>               
+            <th scope="col">Blog Author</th>
+            <th scope="col">Blog Published Date</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>                
+            <td>Blog 1</td>
+            <td>John Smith</td>
+            <td>09/09/2023</td>
+          </tr>
+          <tr>                
+            <td>Blog 2</td>
+            <td>Matthew Robertson</td>
+            <td>10/09/2023</td>
+          </tr>
+          <tr>
+            <td>Blog 3</td>
+            <td>Edward Smith</td>
+            <td>11/09/2023</td>
+          </tr>
+          <tr>
+            <td>Blog 4</td>
+            <td>Jane Smith</td>
+            <td>12/09/2023</td>
+          </tr>
+        </tbody>
+      </table>
 </div>
 <footer class="bg-info text-center py-3">
     <div class="container-fluid d-flex align-items-center">
