--- a/finalproject/authordetails.html
+++ b/finalproject/authordetails.html
@@ -12,55 +12,94 @@
 
 <body>
     <nav class="navbar navbar-expand-lg bg-info">
-            <div class="row d-flex mx-auto w-100">
-                <div class="col-sm-12 col-md-2">
-                    <a class="navbar-brand" href="index.html">My Blog</a>
-                </div>
-                <div class="col-sm-12 col-md-9 d-flex justify-content-center">
-                    <form class="d-flex" role="search">
-                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                        <button class="btn btn-dark" type="submit">Search</button>
-                    </form>
-                </div>
-                <div class="col-sm-12 col-md-1 d-flex justify-content-md-end justify-content-sm-start">
-                    <div class="nav-item dropdown">
-                        <ul class="navbar-nav d-flex">
-                            <li class="nav-item dropdown position-relative">
-                                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                                    data-bs-popper="none" data-bs-boundary="viewport" aria-expanded="false">
-                                    <i class="fa-solid fa-ellipsis-vertical"></i>
-                                </a>
-                                <ul class="dropdown-menu dropdown-menu-sm-start dropdown-menu-md-end position-absolute">
-                                    <li><a class="dropdown-item" href="index.html">Home</a></li>
-                                    <li><a class="dropdown-item" href="blogs.html">Blogs</a></li>
-                                    <li><a class="dropdown-item" href="authors.html">Authors</a></li>
-                                </ul>
-                            </li>
-                        </ul>
-                    </div>
+        <div class="row d-flex mx-auto w-100">
+            <div class="col-sm-12 col-md-2">
+                <a class="navbar-brand" href="index.html">My Blog</a>
+            </div>
+            <div class="col-sm-12 col-md-9 d-flex justify-content-center">
+                <form class="d-flex" role="search">
+                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                    <button class="btn btn-dark" type="submit">Search</button>
+                </form>
+            </div>
+            <div class="col-sm-12 col-md-1 d-flex justify-content-md-end justify-content-sm-start">
+                <div class="nav-item dropdown">
+                    <ul class="navbar-nav d-flex">
+                        <li class="nav-item dropdown position-relative">
+                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                                data-bs-popper="none" data-bs-boundary="viewport" aria-expanded="false">
+                                <i class="fa-solid fa-ellipsis-vertical"></i>
+                            </a>
+                            <ul class="dropdown-menu dropdown-menu-sm-start dropdown-menu-md-end position-absolute">
+                                <li><a class="dropdown-item" href="index.html">Home</a></li>
+                                <li><a class="dropdown-item" href="blogs.html">Blogs</a></li>
+                                <li><a class="dropdown-item" href="authors.html">Authors</a></li>
+                            </ul>
+                        </li>
+                    </ul>
                 </div>
             </div>
+        </div>
     </nav>
     <div>
         <p>
             Author Details Page
         </p>
     </div>
-    <div class="mb-3">
-        <label for="formGroupExampleInput" class="form-label">Blog Author</label>        
-        <input type="text" class="form-control" id="formGroupExampleInput" value="John Smith" disabled readonly>
-      </div>
-      <div class="mb-3">
-        <label for="formGroupExampleInput" class="form-label">Gender</label>
-        <input type="text" class="form-control" id="formGroupExampleInput" value="Male" disabled readonly>
-      </div>
+    <div class="container">
+        <div class="row mx-auto">
+            <div class="col-md-6">
+                <div class="mb-3">
+                    <label for="blogAuthor" class="form-label">Blog Author</label>
+                    <input type="text" class="form-control" id="blogAuthor" value="John Smith" disabled readonly>
+                </div>
+                <div class="mb-3">
+                    <label for="gender" class="form-label">Gender</label>
+                    <input type="text" class="form-control" id="gender" value="Male" disabled readonly>
+                </div>
+            </div>
+            <div class="col-md-6 d-flex justify-content-center align-items-center">
+                <img src="./img/johnsmith.jpg" class="img-fluid author-image" alt="...">
+            </div>
+        </div>
+    </div>
+    <p></p>
+    <div class="container text-center">
+        <table class="table">
+            <thead>
+              <tr class="table-info">               
+                <th scope="col">Blog Title</th>
+                <th scope="col">Blog Author</th>
+                <th scope="col">Blog Published Date</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>                
+                <td>Blog 1</td>
+                <td>John Smith</td>
+                <td>09/09/2023</td>
+              </tr>
+              <tr>                
+                <td>Blog 5</td>
+                <td>John Smith</td>
+                <td>16/09/2023</td>
+              </tr>
+              <tr>
+                <td>Blog 9</td>
+                <td>John Smith</td>
+                <td>17/09/2023</td>
+              </tr>
+            </tbody>
+          </table>
+    </div>
     <footer class="bg-info text-center py-3">
         <div class="container-fluid d-flex align-items-center">
             <p class="col-sm-12 col-md-1 d-flex justify-content-start"></p>
-            <p class="col-sm-12 col-md-10 d-flex justify-content-center mb-0">&copy; 2023 My Blog. All Rights Reserved.</p>
+            <p class="col-sm-12 col-md-10 d-flex justify-content-center mb-0">&copy; 2023 My Blog. All Rights Reserved.
+            </p>
             <button id="theme" class="btn btn-sm btn-dark col-sm-12 col-md-1">Change Theme</button>
         </div>
-    </footer>    
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
