--- a/finalproject/authors.html
+++ b/finalproject/authors.html
@@ -40,10 +40,40 @@
             </div>
         </div>
 </nav>
-<div>
-    <p>
+<p></p>
+<div class="text-center">
+    <h3>
         Authors
-    </p>
+    </h3>
+</div>
+<p></p>
+<div class="container text-center">
+    <table class="table">
+        <thead>
+          <tr class="table-info">               
+            <th scope="col">Blog Author</th>
+            <th scope="col">Gender</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>                
+            <td>John Smith</td>
+            <td>Male</td>
+          </tr>
+          <tr>                
+            <td>Matthew Robertson</td>
+            <td>Male</td>
+          </tr>
+          <tr>
+            <td>Edward Smith</td>
+            <td>Male</td>
+          </tr>
+          <tr>
+            <td>Jane Smith</td>
+            <td>Female</td>
+          </tr>
+        </tbody>
+      </table>
 </div>
 <footer class="bg-info text-center py-3">
     <div class="container-fluid d-flex align-items-center">
