22nd september finalproject

--- a/finalproject/authors.html
+++ b/finalproject/authors.html
@@ -55,23 +55,7 @@
             <th scope="col">Gender</th>
           </tr>
         </thead>
-        <tbody>
-          <tr>                
-            <td>John Smith</td>
-            <td>Male</td>
-          </tr>
-          <tr>                
-            <td>Matthew Robertson</td>
-            <td>Male</td>
-          </tr>
-          <tr>
-            <td>Edward Smith</td>
-            <td>Male</td>
-          </tr>
-          <tr>
-            <td>Jane Smith</td>
-            <td>Female</td>
-          </tr>
+        <tbody id="blogAuthorsTableBody">          
         </tbody>
       </table>
 </div>
