--- a/finalproject/blogs.html
+++ b/finalproject/blogs.html
@@ -56,27 +56,7 @@
             <th scope="col">Blog Published Date</th>
           </tr>
         </thead>
-        <tbody>
-          <tr>                
-            <td>Blog 1</td>
-            <td>John Smith</td>
-            <td>09/09/2023</td>
-          </tr>
-          <tr>                
-            <td>Blog 2</td>
-            <td>Matthew Robertson</td>
-            <td>10/09/2023</td>
-          </tr>
-          <tr>
-            <td>Blog 3</td>
-            <td>Edward Smith</td>
-            <td>11/09/2023</td>
-          </tr>
-          <tr>
-            <td>Blog 4</td>
-            <td>Jane Smith</td>
-            <td>12/09/2023</td>
-          </tr>
+        <tbody id="blogsTableBody">          
         </tbody>
       </table>
 </div>
