--- a/finalproject/blogdetails.html
+++ b/finalproject/blogdetails.html
@@ -51,19 +51,19 @@
             <div class="col-md-6">
                 <div class="mb-3">
                     <label for="blogTitle" class="form-label">Blog Title</label>
-                    <input type="text" class="form-control" id="blogTitle" value="Blog 1" disabled readonly>
+                    <input type="text" class="form-control" id="blogTitle" disabled readonly>
                 </div>
                 <div class="mb-3">
                     <label for="blogAuthor" class="form-label">Blog Author</label>
-                    <input type="text" class="form-control" id="blogAuthor" value="John Smith" disabled readonly>
+                    <input type="text" class="form-control" id="blogAuthor" disabled readonly>
                 </div>
                 <div class="mb-3">
                     <label for="blogDate" class="form-label">Blog Date Published</label>
-                    <input type="text" class="form-control" id="blogDate" value="09/09/2023" disabled readonly>
+                    <input type="text" class="form-control" id="blogDate" disabled readonly>
                 </div>
             </div>
             <div class="col-md-6 d-flex justify-content-center align-items-center">
-                <img src="..." class="img-fluid" alt="...">
+                <img id="blogImage" class="img-fluid" alt="...">
             </div>
         </div>
     </div>    
@@ -72,8 +72,8 @@
             <div class="col-12">
                 <div class="mb-3">
                     <h3>Blog Post</h3>
-                    <p>ipsum dolor sit amet, consectetur adipiscing elit. Sed auctor nunc vitae purus convallis, id feugiat elit tristique. Cras tristique id metus eget scelerisque. Ut eu urna eu tortor consectetur scelerisque. Nulla facilisi. Curabitur eget ipsum vitae velit laoreet aliquet id ut libero. Vivamus in est ut lorem efficitur tristique. Quisque vulputate volutpat quam, a placerat nisl tincidunt ut. In hac habitasse platea dictumst. Duis vel arcu sit amet libero blandit finibus nec et risus.</p>
-                    <p>Pellentesque dapibus lectus vel eros cursus, eu bibendum leo tempus. Sed vel mauris nec justo tristique iaculis. Aliquam non lectus vel tortor efficitur rhoncus. Nulla facilisi. Suspendisse lacinia metus quis dolor volutpat, a laoreet turpis aliquet. Fusce bibendum vel augue eget consequat. Vestibulum efficitur ullamcorper metus, eget euismod urna hendrerit non. Nulla facilisi. Vestibulum euismod, augue vel tincidunt vehicula, justo urna fermentum tortor, ac varius nunc metus id arcu. Curabitur rhoncus vel velit nec lacinia. Donec vel tristique ex. Integer vulputate congue arcu in suscipit. Phasellus ut eros nec metus scelerisque tincidunt. Integer sed velit et augue dignissim laoreet.</p>
+                    <div id="blogContent">
+                </div>
                 </div>
             </div>
         </div>
