--- a/finalproject/index.html
+++ b/finalproject/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="./css/styles.css" type="text/css">
 </head>
 
-<body>
+<body data-home>
     <nav class="navbar navbar-expand-lg bg-info">
             <div class="row d-flex mx-auto w-100">
                 <div class="col-sm-12 col-md-2">
