--- a/finalproject/authordetails.html
+++ b/finalproject/authordetails.html
@@ -17,7 +17,7 @@
                 <a class="navbar-brand" href="index.html">My Blog</a>
             </div>
             <div class="col-sm-12 col-md-9 d-flex justify-content-center">
-                <form class="d-flex" role="search">
+                <form class="d-flex" role="search" action="search.html">
                     <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                     <button class="btn btn-dark" type="submit">Search</button>
                 </form>
