27th Sept search fix

--- a/finalproject/blogdetails.html
+++ b/finalproject/blogdetails.html
@@ -17,9 +17,9 @@
                 <a class="navbar-brand" href="index.html">My Blog</a>
             </div>
             <div class="col-sm-12 col-md-9 d-flex justify-content-center">
-                <form class="d-flex" role="search">
-                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-dark" type="submit">Search</button>
+                <form class="d-flex" role="search" action="search.html" method="dialog">
+                    <input id="search" class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                    <button id="submit" class="btn btn-dark" type="submit">Search</button>
                 </form>
             </div>
             <div class="col-sm-12 col-md-1 d-flex justify-content-md-end justify-content-sm-start">
