--- a/final/ContactUs.html
+++ b/final/ContactUs.html
@@ -3,14 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Details</title>
+    <title>Contact Us</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="DetailsPage.js"></script>
 </head>
-<!-- NavBar section-->
 
-<body style="padding-top: 60px;">
+<body style="padding-top: 72px;">
     <div class="row">
         <nav class="navbar bg-body-tertiary fixed-top">
             <div class="container-fluid">
@@ -41,22 +38,55 @@
             </div>
         </nav>
     </div>
-    <!-- Main section -->
 
-    <div id='poster' style="display: flex; justify-content: center; margin-bottom: 72;">
-    
+    <div class="container text-center">
+        <h2 style="margin-top: 72;">Hello,</h2>
+        <h4 style="margin-top: 32;">Want To Contact?</h4>
+        <p style="margin-top: 24;">Write your name and massege and we will get back to you!</p>
     </div>
+    <div style="margin-left: 72px; margin-right: 72px; margin-top: 72px;">
+        <div class="row">
+            <div class="col-4 offset-2">
 
-    <div class="container-fluid">
-        <div id="movie_details_container" style="margin-left: 72px; margin-right: 72px;">
+                <b>Full Name</b>
+            </div>
+            <div class="col-4">
+                <b>Email</b>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-4 offset-2">
+
+                <input type="text" class="form-control">
+            </div>
+            <div class="col-4">
+                <input type="text" class="form-control">
+            </div>
+        </div>
+        <div class="row" style="margin-top: 32px;">
+
+            <b class="col-8 offset-2">Massege</b>
+        </div>
+        <div class="row" style="margin-left: 4px; margin-right: 4px;">
+            <textarea style="
+            border: 1px solid #ccc;
+            border-radius: 4px;
+            box-sizing: border-box;
+            margin-top: 6px;
+            margin-bottom: 10px;" class="col-8 offset-2" name="" id="" cols="30" rows="10"></textarea>
+        </div>
+        <div class="row " style="margin-top: 32px;">
+            <div class="col-2 offset-2">
+                <a href="#" class="btn" style="background-color:#4DAAE9; color: #ffffff; width: 100%;">Send</a>
+            </div>
         </div>
     </div>
-    <!-- footer Section -->
+
     <footer style="background-color: rgba(0, 0, 0, 0.2); margin-top: 72px;">
         <div class="row"
             style="margin-left: 72px; margin-right: 72px; display: flex; align-items: center; margin-top: 32;">
             <div class="col-3" style="margin-top: 32;">
-                <div style="display: flex; align-items: center; " s>
+                <div style="display: flex; align-items: center;">
                     <img src="/Users/areej/Desktop/FEWD-July/ga-fewd/final/logo.svg" alt="Logo" width="77" height="60"
                         class="d-inline-block align-text-top">
                     <a class="nav-link active" aria-current="page" href="HomePage.html">Studio Ghibli Library</a>
@@ -68,6 +98,7 @@
             </div>
             <div class="col ">
                 <a class="nav-link active" aria-current="page" href="ContactUs.html">Contact Us</a>
+
             </div>
 
         </div>
