--- a/final/HomePage.html
+++ b/final/HomePage.html
@@ -11,16 +11,13 @@
 
 <body>
     <div class="row">
-        <nav class="navbar bg-body-tertiary fixed-top">
+        <nav class="navbar bg-body-tertiary fixed-top custom-navbar"> <!-- Add custom-navbar class here -->
             <div class="container-fluid">
-                <div class="col-2 text-center" style="display: flex; align-items: center;">
-
+                <div class="col-2 text-center">
                     <a class="navbar-brand" href="#">
-                        <img src="/Users/areej/Desktop/FEWD-July/ga-fewd/final/logo.svg" alt="Logo" width="77" height="60"
-                            class="d-inline-block align-text-top">     
+                        <img src="/Users/areej/Desktop/FEWD-July/ga-fewd/final/logo.svg" alt="Logo" width="77" height="60" class="d-inline-block align-text-top">     
                     </a>
                     <a class="nav-link active" aria-current="page" href="HomePage.html">Studio Ghibli Library</a>
-                    
                 </div>
                 <div class="col-8"></div>
                 <div class="col text-center">
@@ -33,13 +30,14 @@
                 <div class="col text-center">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="HomePage.html">Contact Us</a>
+                            <a class="nav-link active" aria-current="page" href="ContactUs.html">Contact Us</a>
                         </li>
                     </ul>
                 </div>
             </div>
         </nav>
     </div>
+    
 
     <div class="container-fluid"
         style="background-image: url('https://c4.wallpaperflare.com/wallpaper/892/692/922/howl-s-moving-castle-studio-ghibli-fantasy-art-clouds-daylight-hd-wallpaper-preview.jpg');background-repeat: no-repeat; background-size: cover;">
@@ -81,7 +79,7 @@
                 <a class="nav-link active" aria-current="page" href="HomePage.html">All Movies</a>
             </div>
             <div class="col ">
-                <a class="nav-link active" aria-current="page" href="HomePage.html">Contact Us</a>
+                <a class="nav-link active" aria-current="page" href="ContactUs.html">Contact Us</a>
 
             </div>
 
