--- a/final/DetailsPage.html
+++ b/final/DetailsPage.html
@@ -12,7 +12,7 @@
 
 <body style="padding-top: 60px;">
     <div class="row">
-        <nav class="navbar bg-body-tertiary fixed-top">
+        <nav class="navbar bg-body-tertiary fixed-top" id="bars">
             <div class="container-fluid">
                 <div class="col-2 text-center" style="display: flex; align-items: center;">
 
@@ -23,7 +23,13 @@
                     <a class="nav-link active" aria-current="page" href="HomePage.html">Studio Ghibli Library</a>
 
                 </div>
-                <div class="col-8"></div>
+                <div class="col-2">
+                    <div class="form-check form-switch">
+                        <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
+                        <label class="form-check-label" for="flexSwitchCheckDefault">Theme</label>
+                    </div>
+                </div>
+                <div class="col-6"></div>
                 <div class="col text-center">
                     <ul class="navbar-nav">
                         <li class="nav-item">
@@ -42,7 +48,7 @@
         </nav>
     </div>
     <!-- Main section -->
-
+<div id="outsideText">
     <div id='poster' style="display: flex; justify-content: center; margin-bottom: 72;">
     
     </div>
@@ -51,8 +57,9 @@
         <div id="movie_details_container" style="margin-left: 72px; margin-right: 72px;">
         </div>
     </div>
+</div>
     <!-- footer Section -->
-    <footer style="background-color: rgba(0, 0, 0, 0.2); margin-top: 72px;">
+    <footer style="background-color: rgba(0, 0, 0, 0.2); margin-top: 72px;" id="bars">
         <div class="row"
             style="margin-left: 72px; margin-right: 72px; display: flex; align-items: center; margin-top: 32;">
             <div class="col-3" style="margin-top: 32;">
