--- a/final/HomePage.html
+++ b/final/HomePage.html
@@ -11,7 +11,7 @@
 
 <body>
     <div class="row">
-        <nav class="navbar bg-body-tertiary fixed-top custom-navbar"> <!-- Add custom-navbar class here -->
+        <nav class="navbar bg-body-tertiary fixed-top custom-navbar" id="bar"> <!-- Add custom-navbar class here -->
             <div class="container-fluid">
                 <div class="col-2 text-center">
                     <a class="navbar-brand" href="#">
@@ -19,7 +19,13 @@
                     </a>
                     <a class="nav-link active" aria-current="page" href="HomePage.html">Studio Ghibli Library</a>
                 </div>
-                <div class="col-8"></div>
+                <div class="col-2">
+                    <div class="form-check form-switch">
+                        <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
+                        <label class="form-check-label" for="flexSwitchCheckDefault">Theme</label>
+                    </div>
+                </div>
+                <div class="col-6"></div>
                 <div class="col text-center">
                     <ul class="navbar-nav">
                         <li class="nav-item">
@@ -56,7 +62,7 @@
     <div class="container mt-5" style="max-width: calc(100% - 144px); margin-left: 72px; margin-right: 72px;">
         <div class="row">
             <div class="col">
-                <h2>All Movies</h2>
+                <h2 id="outsideText">All Movies</h2>
             </div>
         </div>
         <div class="row g-4" id="movie_container">
@@ -65,7 +71,7 @@
 
     </div>
 
-    <footer style="background-color: rgba(0, 0, 0, 0.2); margin-top: 72px;">
+    <footer style="background-color: rgba(0, 0, 0, 0.2); margin-top: 72px;" id="bar">
         <div class="row" style="margin-left: 72px; margin-right: 72px; display: flex; align-items: center; margin-top: 32;">
             <div class="col-3" style="margin-top: 32;">
                 <div style="display: flex; align-items: center;">
